Fix spacing around the position widget

--- a/eda/position_widget/static/position_widget/PositionWidget.css
+++ b/eda/position_widget/static/position_widget/PositionWidget.css
@@ -2,4 +2,5 @@
 
 .position_widget_map_container {
 	border: 1px solid black;
+	margin-top: 0.5rem;
 }
